# slipgates

./: .gitignore  CMakeLists.txt  README.md  TODO  math_gen.py
_res/: menu.plt  selurina.gpl  slipgates.gpl
_res/music/: slip2.mod
src/: anim_frame_def.h  assets.c  assets.h  body_box.c  body_box.h  bouncer.c  bouncer.h  config.c  config.h  credits.c  credits.h  cutscene.c  cutscene.h  debug.c  debug.h  direction.h  fade.c  fade.h  game.c  game.h  game_math.c  game_math.h  interaction.c  interaction.h  logo.c  logo.h  map.c  map.h  menu.c  menu.h  player.c  player.h  selurina.c  selurina.h  slipgate.c  slipgate.h  slipgates.c  slipgates.h  tile.h  tile_tracer.c  (+6 more)
